# ebac

./: .coverage  .gitignore  Dockerfile  celery_app.py  coverage.xml  docker-compose.yml  logging.yaml  main.py  pyproject.toml  revisão.md  service.yaml  tarefas.db  tasks.py
Backend/: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  celery_app.py  coverage.xml  deployment.yaml  diagrama-docker.drawio  docker-compose.yml  kafka_producer.py  main.py  notes.md  pyproject.toml  service.yaml  tasks.py  test.db
Backend/.opencode/command/: create-tasks.md
Backend/docs/: diagrama-docker-arquitetura.md  diagrama-docker-descricao.md
Backend/scripts/: crud.py  estoque.py  fastapi_async_livros.py  livros.sql  problem_26.py  tarefas.py
Backend/tarefas/0 - Não estruturado/: calculadora.py  fastapi_async_livros.md  tarefas_2.py
Backend/tarefas/Módulo 22 - Containerização de Aplicações FastAPI/: README.md  diagrama.drawio
Backend/tarefas/Módulo 26 - Cache e Otimização com Redis/: docker-compose.yml  fastapi_async_livros.py
Backend/tarefas/Módulo 27 - Filas de Mensagens e Processamento Assíncrono/: celery_app.py  requirements.txt
Backend/tarefas/Módulo 29 - Testes Unitários/: .coverage
Backend/tarefas/Módulo 30 - Testes Unitários/: .coverage  revisao.md  test_pokemon.py
Backend/tarefas/Tarefa 14 - Operações SQL e Manipulação de Dados/: livros.sql
Backend/tarefas/Tarefa 16 - Integração de Banco de Dados com FastAPI/: tarefas_4.py
Backend/tarefas/Tarefa 21 - Orquestração com Docker Compose/: readme.md
Backend/tarefas/Tarefa 26 - Cache e Otimização com Redis/: README.md
Backend/tarefas/Tarefa 27 - Filas de Mensagens e Processamento Assíncrono/: docker-compose.yml
Backend/tarefas/Tarefa 28 - Filas de Mensagens e Processamento Assíncrono/: README.md
Backend/tarefas/Tarefa 29 - Testes Unitários/: test_pokemon.py
Backend/tarefas/Tarefa 31 - Introdução ao TDD/: .$TDD - Diagram.drawio.bkp  TDD - Diagram.drawio
Backend/tarefas/Tarefa 32 - Aplicação Prática de TDD em APIs/: app.py  requirements.txt
Backend/tarefas/Tarefa 33 - TDD em Larga Escala/: app.py  test_auth.py
Backend/tarefas/Tarefa 38 - Gerenciamento de Logs e Monitoramento com ELK Stack/: ELK_Stack_Diagram_LuisFernandes.drawio
Backend/tests/: test_auth.py  test_database.py  teste.py
(+39 files in other folders)
