[tool.poetry]
package-mode = false
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
aiosqlite = ">=0.22.1"
fastapi = { version = ">=0.136.1", extras = ["standard"] }
sqlalchemy = ">=2.0.49"
redis = ">=5.0.0"
celery = ">=5.4.0"
python-dotenv = ">=1.0.0"
kafka-python = ">=2.0.2"
elasticsearch = ">=8.0.0,<10.0.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = ">=6.0.0"
pytest-mock = ">=3.15.1"
ruff = ">=0.9.0"

[tool.pytest.ini_options]
pythonpath = [".","./tarefas/Tarefa 32 - Aplicação Prática de TDD em APIs"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
