[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = ["Luis Fernandes <luis.fernandes@sercompe.com.br>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
aiosqlite = ">=0.22.1"
fastapi = { version = ">=0.136.1", extras = ["standard"] }
sqlalchemy = ">=2.0.49"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
