[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.1",
    "sqlalchemy>=2.0.49",
    "redis>=8.0.0,<9.0.0",
    "celery>=5.6.3",
    "kafka-python>=3.0.2",
    "pytest>=9.1.0",
    "pytest-cover>=3.0.0",
    "fakeredis>=2.36.2",
]

[tool.pytest.init_options]
pythonpath = ["."]
